                        - CSS used across multiple pages
                        - Looks a little more professional (noice)
                        - JFocus (School CS stuff) and JavaScript (Personal Webpage stuff) are properly seperated
                        - Directories Fixed Extensively
                        - Instagram and mail information included (Instagram follower policies remain the same)
                        - End of Term Project - Peter Go.zip Deprecation warning placed at the bottom of the screen
                        - MIT license enforced on all parts of the webpage
                        - SO EXCITED!!! (I should be sleeping, idc)
Nov 12th PU8 (Peter) - ISSData.html updated

Nov 14th Cls4 (Peter) - Created two files including Foci 3 and 3B
Nov 14th Cls5 (Peter) - Link made with main.html
Nov 14th Cls6 (Peter) - Little tweaks to main and Focus3 files
Nov 14th Cls7 (Peter) - Bug Fixes

Nov 14th MT3 (Peter) - Change log not working properly?

Nov 15th Cls8 (Peter) - Additional Fixes prev Focus 3B
Nov 15th Cls9 (Peter) - Change Log Updates

Nov 15th MT4 (Peter) - CSS updating!
Nov 15th MT5 (Peter) - CSS updating 222222!
Nov 15th MT6 (Peter) - Main Maintinence Update (Also added some image files)
Nov 15th MT7 (Peter) - Deleted some old deprecated files.

Nov 16th MT8 (Peter) - G'morning! Just moved some files. That's it. Have a nice day!

Nov 16th PU9 (Peter) - Just making some header file changes.
Nov 16th PU10 (Peter) - Just making some header file changes. 222222222
Nov 16th PU11 (Peter) - Just making some header file changes. 333333333
Nov 16th PU12 (Peter) - JS Header updating 1
Nov 16th PU13 (Peter) - JS Header updating 2

Nov 17th PU14 (Peter) - JFocus Project Easier Viewing webpage creation started




Thanks for taking your time to read the change log! 
I might sound cold in many of the update descriptions, but it's like that just for time efficiency. 
Have a nice day! :)