@@ -6,8 +6,24 @@
     <body class = "flexBody">
         <article class = "flexArticle">
             <h1>
-                JFocus File Viewing Page
+                JFocus File Viewing Page!
             </h1>
+            <a href = "JFocus/JFocus1.html" class = "sourceCodeEmoji centerObj">
+                JFocus1
+            </a>
+            <a href = "JFocus/JFocus2.html" class = "sourceCodeEmoji centerObj">
+                JFocus2
+            </a>
+            <a href = "JFocus/JFocus3.html" class = "sourceCodeEmoji centerObj">
+                JFocus3
+            </a>
+            <a href = "JFocus/JFocus3B.html" class = "sourceCodeEmoji centerObj">
+                JFocus3B
+            </a>
+            <a href = "JFocus/JFocus.html" class = "sourceCodeEmoji centerObj">
+                JFocus4
+                <p class = "postletter">(Work in Progress)</p>
+            </a>
         </article>
     </body>
     <script>
